--- a/FUNDING.yml
+++ b/FUNDING.yml
@@ -1,7 +1,7 @@
 
 # These are supported funding model platforms
 
-github: song940
+github: lsongdev
 patreon: song940
 open_collective: song940
 ko_fi: # Replace with a single Ko-fi username
