--- a/FUNDING.yml
+++ b/FUNDING.yml
@@ -10,4 +10,4 @@ community_bridge: # Replace with a single Community Bridge project-name e.g., cl
 liberapay: # Replace with a single Liberapay username
 issuehunt: # Replace with a single IssueHunt username
 otechie: # Replace with a single Otechie username
-custom: https://git.io/fjRcB
+custom: https://gist.github.com/lsongdev/8aa4efd1e9409a7342a5e5f440e8111a
